--- a/pagarcom.css
+++ b/pagarcom.css
@@ -1,8 +1,8 @@
 
 
 
-@media only screen and (max-width: 800px){.desk{display: none; #sqr{display: none;}}}
-@media only screen and (min-width: 800px){.mobile{display: none; #sqr{display: none;}}}
+@media only screen and (max-width: 800px){.desk{display: none; #sqr{display: none; #codepix{display: block;}}}}
+@media only screen and (min-width: 800px){.mobile{display: none; #sqr{display: block; #codepix{display: none;}}}}
 
 * {
 
